Bug 1089478 - Apply r5630, r5692 to fix Clang 3.5 warnings in WebRTC. r=rjesup